// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Reducer Boards Explorer handles HIDE_BOARDS_EXPLORER action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
}
`;

exports[`UI Reducer Boards Explorer handles SHOW_BOARDS_EXPLORER action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": true,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
}
`;

exports[`UI Reducer Header Search handles BLUR_HEADER_SEARCH action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
}
`;

exports[`UI Reducer Header Search handles FOCUS_HEADER_SEARCH action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "search",
}
`;

exports[`UI Reducer Login User handles LOGIN_USER_FAILURE action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "Something wrong!",
    "kind": "wrongCredentials",
    "message": "Incorrect email (username) or password.",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "isFetching": true,
}
`;

exports[`UI Reducer Login User handles LOGIN_USER_REQUEST action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": true,
    "signup": false,
  },
  "focus": "",
}
`;

exports[`UI Reducer Login User handles LOGIN_USER_SUCCESS action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "isFetching": true,
}
`;

exports[`UI Reducer Logout User handles LOGOUT_USER action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
}
`;

exports[`UI Reducer Signup User handles SIGNUP_USER_FAILURE action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "Unknown Server Error!",
    "kind": "serverError",
    "message": "Our server may be down. Please retry later!",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
}
`;

exports[`UI Reducer Signup User handles SIGNUP_USER_REQUEST action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": true,
  },
  "focus": "",
}
`;

exports[`UI Reducer Signup User handles SIGNUP_USER_SUCCESS action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
}
`;

exports[`UI Reducer UI Errors RESET_UI_ERROR 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
}
`;

exports[`UI Reducer UI Errors handles SET_UI_ERROR action 1`] = `
Object {
  "activeMenus": Object {
    "boardsExplorer": false,
  },
  "error": Object {
    "header": "Verify email!",
    "kind": "invalidEmail",
    "message": "That doesn't look like an email address…",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
}
`;
